# pytermgame

./: .gitignore  README.md  pyproject.toml
examples/: minimal_game.py
games/snake/: __init__.py  __main__.py  main.py
pytermgame/: __init__.py  collision.py  engine.py  entities.py  input.py  screen.py  utils.py
tests/: test_engine.py
